# minicron

./: README.md  build.sh  compile.sh  minicron.cabal  run.sh
System/Cron/: Mini.hs  WakeUp.hs
